# solo

./: .buntest  .gitignore  Cargo.toml  GRPC_BUGS_IMPROVEMENTS.md  GRPC_DELIVERABLES.md  GRPC_DEVELOPMENT_PLAN.md  GRPC_IMPLEMENTATION_STATUS.md  GRPC_IMPLEMENTATION_SUMMARY.md  GRPC_INCREMENTAL_PHASES.md  GRPC_INDEX.md  GRPC_README.md  GRPC_SESSION_SUMMARY.md  GRPC_SOLO_MANUAL_TESTING.md  GRPC_TESTING_PLAN.md  GRPC_TEST_SERVER.md  GRPC_USER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  MODULO2_COMPLETO.md  README.md  SESSAO_FINAL_SUMMARY.md  biome.json  build.rs  bun.lockb  example.proto  index.html  main.sh  package-lock.json  package.json  test.sh  tsconfig.build.json  version.sh  version_manager.rs
.github/workflows/: ci.yml  manual-release.yml  publish.yml  release.yml  version-bump.yml
releases/0.0.1/macos/solo.app/Contents/: Info.plist
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/client/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/graphql/: mod.rs  queries.rs
src-tauri/src/grpc/: client.rs  commands.rs  mod.rs  proto_parser.rs  reflection.rs  streaming.rs  test_utils.rs
src-tauri/src/http/: mod.rs  tests.rs
src-tauri/tests/: grpc_integration_tests.rs
src/components/: BearerToken.test.tsx  BearerToken.tsx  Checkbox.test.tsx  Checkbox.tsx  CopyIcon.test.tsx  CopyIcon.tsx  DescriptionTab.test.tsx  DescriptionTab.tsx  Folder.test.tsx  Folder.tsx  GraphQLEditor.tsx  GrpcEditor.tsx  GrpcSchemaViewer.tsx  InputMethod.test.tsx  InputMethod.tsx  JsonViewer.test.tsx  JsonViewer.tsx  LatestRelease.tsx  MetadataTab.test.tsx  MetadataTab.tsx  RequestForm.tsx  ResponseView.test.tsx  ResponseView.tsx  SchemaViewer.tsx  SelectAuth.test.tsx  SelectAuth.tsx  SelectMethod.test.tsx  SelectMethod.tsx  ShortcutsDisplay.test.tsx  ShortcutsDisplay.tsx  ShortcutsModal.test.tsx  ShortcutsModal.tsx  Sidebar.tsx  SmartUrlInput.test.tsx  SmartUrlInput.tsx  TabComponent.test.tsx  TabComponent.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  TitleBar.test.tsx  (+7 more)
src/components/WindowControl/: Linux.tsx  MacOs.tsx  Windows.tsx
src/context/: FileContext.tsx  RequestContext.tsx  ThemeContext.tsx  VariablesContext.tsx
src/hooks/: useBracketAutocompletion.test.tsx  useBracketAutocompletion.tsx  useCurlGenerator.tsx  useIntrospection.tsx  useKeyboardShortcuts.tsx  useLatestRelease.tsx  useRequestStorage.test.ts  useRequestStorage.ts  useToast.tsx  useUpdateSettings.ts  useVariableSubstitution.test.tsx  useVariableSubstitution.tsx
src/test/: setup.ts  test-utils.tsx
src/types/: WindowControlTypes.ts
src/utils/: curlGenerator.test.ts  curlGenerator.ts
