[package]
name = "solo"
version = "0.1.0"
description = "Solo Client HTTP"
authors = ["Igor Vieira <igor.p.r.vieira@gmail.com>"]
edition = "2021"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
prost-reflect = { version = "0.12", features = ["serde"] }
tonic-reflection = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
bytes = "1.0"
http = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
httpmock = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-test = "0.4"
tokio-test = "0.4"
tempfile = "3.0"
